# gittersearch

./: .gitignore  Makefile  admin.py  app.py  justfile  pyproject.toml  readme.md  requirements.txt  setup.cfg
.chalice/: config.json
hubhud/: cli.py  github.py  gitter.py  schema.py  search.py
module/: apirole.tf  bucket.tf  dynamodb.tf  elasticsearch.tf  kinesis.tf  output.tf  parameters.tf  vars.tf
tests/: test_github.py  test_gitter.py
