[tool.poetry]
name = "hubhud"
version = "0.1.0"
description = "Github Gitter - Heads Up Display"
authors = ["Kapil Thangavelu <kapilt@gmail.com>"]
license = "Apache-2.0"
packages = [
  {include = "hubhud"}
]

[tool.poetry.scripts]
hubhud = 'hubhud.cli:cli'

[tool.poetry.dependencies]
python = "^3.10"
python-dateutil = "^2.8.2"
clickhouse-driver = "^0.2.2"
SQLAlchemy = "^1.4.28"
duckdb = "^0.3.1"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
